v1.3.1 Fixed scrolling on mobile v1.3.2 Fade out used card v1.4.0 secret background changing (off) v1.4.1 css effects mobile v2.0.0 Stable build, font/mobile display changes

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,27 @@
 :root {
     --colour-glass: #f5f7f8bd;
+    --colour-accent: #f07167;
+  }
+
+  * {
+    font-family: Helvetica, sans-serif;
+
   }
 
 body {
+    padding: 0;
+    margin: 0;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 
-    background-color: var(--colour-glass);
+    background-color: #e8f0f3;
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
+
+    transition: all .5s ease-in-out;
 }
 
 header{
@@ -21,13 +31,40 @@ header{
     align-items: center;
     width: 100%;
     background-color: var(--colour-glass);
+    padding-bottom: 1rem;
 }
 
 h1{
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1.5em;
     font-weight: bold;
     margin: .5rem;
+    text-decoration: underline;
+    text-decoration-color: --var(--colour-accent);
 }
+
+.options {
+    width: 100px;
+    position: absolute;
+    top: 0.5rem;
+    right: 1rem;
+    display: inline-block;
+}
+
+.options-content {
+    position: absolute;
+    justify-content: left;
+    flex-direction: column;
+    align-items: left;
+    display: none;
+}
+.option {
+    margin-top: 0.25rem;
+}
+
+.options:hover .options-content {
+    display: flex;
+  }
 
 .card-window {
     background-color: var(--colour-glass);
@@ -41,6 +78,17 @@ h1{
     box-shadow: 0px 4px 6px #888888;
 }
 
+.frosted {
+    backdrop-filter: blur(20px);
+    background-color: var(--colour-glass);
+    box-shadow: 0px 1px 12px #888888;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.transparent {
+    animation: fadeOut 0.5s;
+    opacity: 0;
+}
 
 .game-over {
     width: 100%;
@@ -58,8 +106,23 @@ h1{
     100% {opacity:1;}
   }
 
+  @keyframes fadeOut {
+    0% {opacity:1;}
+    100% {opacity:0;}
+  }
+
 .slide-text-img {
     border: 2px solid grey;
+}
+
+.score {
+    border-radius: 8px;
+    height: 1.5rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .restart-btn {
@@ -68,8 +131,11 @@ h1{
     flex-direction: column;
     align-items: center;
     cursor: pointer;
-    padding: 0.25rem;
-    border: 2px solid darkgrey;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    border: 2px solid grey;
     background-color: lightgrey;
     margin-top: 1rem;
     border-radius: 0.5rem;
@@ -77,22 +143,61 @@ h1{
 }
 
 .restart-btn:hover {
-    background-color: darkgrey;
+    background-color: grey;
     color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transform: translate(0px,-2px);
 }
+
+@keyframes wiggle { 
+
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    25% { transform: translate(-1px, -2px) rotate(-1deg); }
+    50% { transform: translate(-2px, -1px) rotate(1deg); }
+    75% { transform: translate(2px, -4px) rotate(0deg); }
+ }
+
+ 
+@keyframes wiggle2 { 
+
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    25% { transform: translate(-1px, -2px) rotate(-1deg); }
+    50% { transform: translate(-2px, 0px) rotate(1deg); }
+    75% { transform: translate(2px, -1px) rotate(0deg); }
+ }
+
+ .grow {
+    animation: grow .5s;
+ }
+
+ @keyframes grow { 
+
+    0% { transform: scale(1, 1); }
+    50% { transform: scale(1.5, 1.5); }
+    100% { transform: scale(1, 1); }
+ }
+
 
   /* @media only screen and (min-width: 401px) and (max-width: 960px)  */
   
   /* Mobile Styles */
-  @media only screen and (min-width: 0px) and (max-width: 960px) {
+  @media only screen and (min-width: 0px) and (max-width: 560px) {
     body {
-      font-size: 24px;
+      font-size: 16px;
     }
+
+    /* .description {
+        visibility: none;
+        height: 0;
+        color:#88888800;
+    } */
+
 
     .card-window {
         height: 70vw;
         width: 100vw;
-
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .slide {
@@ -105,16 +210,24 @@ h1{
     }
     
     .slide-img, .slide-text-img {
-        width: 48vw;
-        height: 67vw;
+        margin-left: 1vw;
+        margin-right: 1vw;
+        width: 46vw;
+        aspect-ratio: 150 / 209;
         margin-bottom: 0.5rem;
         cursor: pointer;
+    }
+
+    .slide-img:hover {
+        animation: wiggle2 .3s;
+        transition: ease-in-out;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
   }
   
   /* Desktop Styles */
-  @media only screen and (min-width: 961px) {
+  @media only screen and (min-width: 561px) {
     body {
     }
 
@@ -138,5 +251,12 @@ h1{
         height: 340px;
         margin-bottom: 0.5rem;
         cursor: pointer;
+    }
+
+    .slide-img:hover {
+        animation: wiggle .3s;
+        transition: ease-in-out;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        transform: translate(0px,-5px);
     }
   }
